feat(LocationEditGui): add ability to reset all visual properties via shift + right-click